# API-Project-2

./: .gitignore  Godrej.csv  SBI.csv  TSLA.csv  api.ipynb  app.py  main.py  pyproject.toml  utils.py
